# iceportal-rich-presence

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: errors.rs  main.rs  series.rs
