[package]
name = "iceportal_rich_presence"
version = "1.0.8"
edition = "2021"
authors = ["AdriDevelopsThings"]
readme = "README.md"
repository = "https://github.com/AdriDevelopsThings/iceportal-rich-presence"
license = "AGPL-3.0"
description = "Show your current ride in discord via the ICE portal api"


[dependencies]
discord-rich-presence = "~0.2"
iceportal = "~2.0"
inquire = "~0.5"
tokio = { version = "1", features = ["full"] }
