[package]
name = "iceportal_rich_presence"
version = "1.0.9"
edition = "2021"
authors = ["AdriDevelopsThings"]
readme = "README.md"
repository = "https://github.com/AdriDevelopsThings/iceportal-rich-presence"
license = "AGPL-3.0"
description = "Show your current ride in discord via the ICE portal api"


[dependencies]
discord-rich-presence = "0"
iceportal = "3"
inquire = "0"
tokio = { version = "1", features = ["full"] }
